--- a/styles.css
+++ b/styles.css
@@ -16,32 +16,10 @@ main {
   min-height: 71vh;
 }
 
-h1 {
-    font-size: 36px;
-    text-align: center;
-}
-
-p {
-    font-size: 18px;
-    padding: 10px;
-    margin: 20px;
-}
-
 .container {
   max-width: 800px;
   margin: auto;
   padding: 20px;
-}
-
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 10px;
-}
-
-.column {
-  flex: 1;
-  padding: 10px;
 }
 
 .container-nav {
@@ -111,6 +89,10 @@ footer {
   justify-content: center;
   text-align: center;
   width: 100%;
+}
+
+.greeting {
+  text-align: center;
 }
 
 @media (max-width: 768px) {
